@@ -3,7 +3,6 @@ package com.somnus.apache;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -11,12 +10,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import com.google.common.collect.ImmutableMap;
 import org.apache.commons.beanutils.PropertyUtils;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.collections4.SetUtils;
 import org.apache.commons.collections4.MapUtils;
-import org.apache.commons.collections4.Predicate;
 import org.apache.commons.collections4.functors.UniquePredicate;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Test;
@@ -29,26 +28,39 @@ import org.junit.Test;
  * @Description: TODO
  * @date 2015年6月12日 下午5:38:59
  */
-public class CommonsCollections {
+public class CommonsCollectionTest {
 
     @Test
-    public void CollectionUtils() {
+    public void collections(){
         System.out.println(Collections.singletonList(1));
+        System.out.println(Collections.singleton(1));
         System.out.println(Collections.singletonMap("a", "1"));
-        System.out.println(Collections.min(Arrays.asList(1, 2, 3)));
 
-        System.out.println(Collections.max(Arrays.asList(4, 8, 3, 9, 5), (i1, i2) -> i1.compareTo(i2)));
+        System.out.println(Collections.min(List.of(1, 2, 3)));
+        System.out.println(Collections.max(List.of(4, 8, 3, 9, 5), Integer::compareTo));
 
-        List<String> emptyList = Collections.emptyList();
-        emptyList.subList(0,0);
-		
+        System.out.println(Collections.emptyList());
+        System.out.println(Collections.emptySet());
+        System.out.println(Collections.emptyMap());
+
+        System.out.println(Collections.emptySortedSet());
+        System.out.println(Collections.emptySortedMap());
+
+        System.out.println(Collections.unmodifiableList(Arrays.asList("1", "2", "3")));
+        System.out.println(Collections.unmodifiableSet(new HashSet<>(Arrays.asList("1", "2", "3"))));
+        System.out.println(Collections.unmodifiableMap(ImmutableMap.of("a", 1)));
+    }
+
+    @Test
+    public void collectionUtils() {
+
 		/*集合判断： 
 		例1: 判断集合是否为空:*/
-        System.out.println(CollectionUtils.isEmpty(emptyList));
+        System.out.println(CollectionUtils.isEmpty(Collections.emptyList()));
         System.out.println(CollectionUtils.isEmpty(Arrays.asList("1", "2", "3")));
 
         /*例2: 判断集合是否不为空:*/
-        System.out.println(CollectionUtils.isNotEmpty(emptyList));
+        System.out.println(CollectionUtils.isNotEmpty(Collections.emptySet()));
         System.out.println(CollectionUtils.isNotEmpty(Arrays.asList("1", "2", "3")));
 
         System.out.println(CollectionUtils.union(
@@ -73,7 +85,7 @@ public class CommonsCollections {
     }
 
     public <E> List<E> unique(List<E> param, final String property) {
-        final Set<Object> iSet = new HashSet<Object>();
+        final Set<Object> iSet = new HashSet<>();
         List<E> result = (List<E>) CollectionUtils.select(param, (object) -> {
             Object val = null;
             try {
@@ -87,19 +99,19 @@ public class CommonsCollections {
     }
 
     public static void main(String[] args) {
-        List<Person> param = new ArrayList<Person>();
+        List<Person> param = new ArrayList<>();
         param.add(new Person("admin", "password", new Date(), null, null));
         param.add(new Person("admin", "password2", new Date(), null, null));
         param.add(new Person("admin3", "password3", new Date(), null, null));
         param.add(new Person("admin", "password4", new Date(), null, null));
 
-        CommonsCollections util = new CommonsCollections();
+        CommonsCollectionTest util = new CommonsCollectionTest();
         System.out.println(util.unique(param, "username"));
     }
 
     @Test
     public void MapUtils() {
-        Map<String, Object> map = new HashMap<String, Object>();
+        Map<String, Object> map = new HashMap<>();
         map.put("a", "dddd");
         map.put("b", 100);
         System.out.println(MapUtils.getString(map, "a"));
